--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -16,7 +16,6 @@ body {
 h1, h2, h3, h4, h5, h6, p {
   margin: 0;
 }
-
 .green {
   color: #38c695;
 }
@@ -26,7 +25,31 @@ h1, h2, h3, h4, h5, h6, p {
 .yellow {
   color: #feb960;
 }
-
+.redline {
+  content: "";
+  height: 3px;
+  width: auto;
+  background-color: #fc5f45;
+  display: inline-block;
+}
+.greenline {
+  content: "";
+  height: 3px;
+  background-color: #38c695;
+  display: inline-block;
+}
+.violetline {
+  content: "";
+  height: 3px;
+  background-color: #b27cf5;
+  display: inline-block;
+}
+.yellowline {
+  content: "";
+  height: 3px;
+  background-color: #feb960;
+  display: inline-block;
+}
 /* Base elements */
 .container {
   width: 1140px;
@@ -128,3 +151,40 @@ h1, h2, h3, h4, h5, h6, p {
 }
 
 /* About block */
+.about {
+  width: 100%;
+  height: 850px;
+}
+.about__inner {
+  height: 850px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.about__img {
+  border: 4px #ddd solid;
+  width: 555px;
+  height: 700px;
+}
+.about__text {
+  width: 655px;
+  margin-left: -65px;
+  padding: 80px 50px;
+  background-color: #fff;
+  box-shadow: 0 0 5px rgba(0,0,0,0.2);
+}
+.about__title {
+  font-family: 'Libre Baskerville', sans-serif;
+  font-weight: 700;
+  font-size: 32px;
+  color: #000;
+  margin-bottom: 30px;
+}
+.about__p {
+  margin-bottom: 20px;
+  font-size: 14px;
+}
+bottomline {
+  display: block;
+  width: 100%;
+}
