--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -25,10 +25,15 @@ h1, h2, h3, h4, h5, h6, p {
 .yellow {
   color: #feb960;
 }
+.fourblock {
+  width: 25%;
+}
+.oneblock {
+  width: 100%;
+}
 .redline {
   content: "";
   height: 3px;
-  width: auto;
   background-color: #fc5f45;
   display: inline-block;
 }
@@ -50,13 +55,27 @@ h1, h2, h3, h4, h5, h6, p {
   background-color: #feb960;
   display: inline-block;
 }
+
 /* Base elements */
 .container {
   width: 1140px;
   margin: 0 auto;
   padding: 0 15px;
 }
-
+.button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 180px;
+  height: 50px;
+  background-color: #fc5f45;
+  border-radius: 25px;
+  color: #fff;
+  text-transform: uppercase;
+  text-decoration: none;
+  font-weight: 600;
+  font-size: 14px;
+}
 /* Header */
 .header{
   width: 100%;
@@ -115,20 +134,7 @@ h1, h2, h3, h4, h5, h6, p {
   justify-content: center;
   margin: 40px 0 0 0;
 }
-.button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 180px;
-  height: 50px;
-  background-color: #fc5f45;
-  border-radius: 25px;
-  color: #fff;
-  text-transform: uppercase;
-  text-decoration: none;
-  font-weight: 600;
-  font-size: 14px;
-}
+
 .home__features {
   display: flex;
   align-items: center;
@@ -153,10 +159,10 @@ h1, h2, h3, h4, h5, h6, p {
 /* About block */
 .about {
   width: 100%;
-  height: 850px;
+  height: 1000px;
 }
 .about__inner {
-  height: 850px;
+  height: 1000px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -166,12 +172,14 @@ h1, h2, h3, h4, h5, h6, p {
   width: 555px;
   height: 700px;
 }
-.about__text {
+.text_wrapper {
   width: 655px;
   margin-left: -65px;
-  padding: 80px 50px;
   background-color: #fff;
   box-shadow: 0 0 5px rgba(0,0,0,0.2);
+}
+.about__text {
+  padding: 80px 50px;
 }
 .about__title {
   font-family: 'Libre Baskerville', sans-serif;
@@ -184,7 +192,9 @@ h1, h2, h3, h4, h5, h6, p {
   margin-bottom: 20px;
   font-size: 14px;
 }
-bottomline {
+.bottomline {
   display: block;
   width: 100%;
+  font-size: 0;
+  vertical-align: bottom;
 }
