--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -181,14 +181,14 @@ h1, h2, h3, h4, h5, h6, p {
 .about__text {
   padding: 80px 50px;
 }
-.about__title {
+.text__title {
   font-family: 'Libre Baskerville', sans-serif;
   font-weight: 700;
   font-size: 32px;
   color: #000;
   margin-bottom: 30px;
 }
-.about__p {
+.text__p {
   margin-bottom: 20px;
   font-size: 14px;
 }
@@ -197,4 +197,41 @@ h1, h2, h3, h4, h5, h6, p {
   width: 100%;
   font-size: 0;
   vertical-align: bottom;
+}
+
+/* Focus block*/
+.focus {
+  width: 100%;
+  height: 825px;
+  background-color: #f7f7f7;
+}
+.focus__inner {
+  height: 825px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.focus__wrapper {
+  width: 100%;
+  text-align: center;
+}
+.focus__blocks {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 80px;
+}
+.focus__block {
+  background-color: #fff;
+  box-shadow: 0 0 5px rgba(0,0,0,0.2);
+}
+.block__wrapper {
+  display: inline-block;
+  height: 230px;
+  width: 205px;
+  padding: 60px 30px;
+}
+.focus__title {
+  font-weight: 500;
+  font-size: 16px;
+  margin: 30px 0;
 }
