--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -76,6 +76,17 @@ h1, h2, h3, h4, h5, h6, p {
   font-weight: 600;
   font-size: 14px;
 }
+.text__title {
+  font-family: 'Libre Baskerville', sans-serif;
+  font-weight: 700;
+  font-size: 32px;
+  color: #000;
+  margin-bottom: 30px;
+}
+.text__p {
+  margin-bottom: 20px;
+  font-size: 14px;
+}
 /* Header */
 .header{
   width: 100%;
@@ -181,17 +192,6 @@ h1, h2, h3, h4, h5, h6, p {
 .about__text {
   padding: 80px 50px;
 }
-.text__title {
-  font-family: 'Libre Baskerville', sans-serif;
-  font-weight: 700;
-  font-size: 32px;
-  color: #000;
-  margin-bottom: 30px;
-}
-.text__p {
-  margin-bottom: 20px;
-  font-size: 14px;
-}
 .bottomline {
   display: block;
   width: 100%;
@@ -235,3 +235,32 @@ h1, h2, h3, h4, h5, h6, p {
   font-size: 16px;
   margin: 30px 0;
 }
+
+/* Video block */
+.video__inner {
+  width: 100%;
+  height: 500px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #3f4049;
+}
+.video__wrapper {
+  text-align: center;
+}
+.video__title {
+  font-weight: 400;
+  font-size: 30px;
+  color: #fff;
+}
+.video__btn {
+  margin: 40px 0;
+}
+
+
+
+
+
+
+
+/* Portfolio block */
