--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -25,6 +25,9 @@ h1, h2, h3, h4, h5, h6, p {
 .yellow {
   color: #feb960;
 }
+.red {
+  color: #fc5f45;
+}
 .fourblock {
   width: 25%;
 }
@@ -285,11 +288,72 @@ h1, h2, h3, h4, h5, h6, p {
   height: 288px;
   margin: 10px;
   background-color: #fff;
-  transition: 0.2s linear;
 }
 .portfolio__block:hover {
   width: 350px;
   height: 278px;
-  padding: 4px;
-  box-shadow: 0 0 4px rgba(0,0,0,0.2);
+  padding: 5px;
+  box-shadow: 0 0 5px rgba(0,0,0,0.1);
+}
+
+/* Team block */
+.team__inner {
+  width: 100%;
+  height: 1000px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #e5e5e5;
+}
+.team__wrapper {
+  text-align: center;
+}
+.team__blocks {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.team__block {
+  width: 263px;
+  height: 350px;
+  background-color: #fff;
+  margin: 0 10px;
+  box-shadow: 0 0 5px rgba(0,0,0,0.1);
+}
+.block__inner {
+  padding: 5px;
+}
+.block__text {
+  height: 72px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.block__title {
+  font-size: 18px;
+  font-weight: 500;
+}
+.member_description {
+  width: 1112px;
+  height: 352px;
+  background: #fff;
+  margin: 50px auto;
+  position: relative;
+}
+.member_description::after,
+.member_description::before {
+  content: '';
+  position: absolute;
+  background: #fff;
+  left: 90px;
+  top: -24px;
+  width: 70px;
+  height: 70px;
+  z-index: -1;
+  transform: rotate(45deg);
+}
+.member_description::before {
+  z-index: 1; /* Накладываем поверх, чтобы скрыть следы тени */
+  box-shadow: none; /* Прячем тень */
 }
