--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -9,7 +9,6 @@ body {
     font-weight: 400;
     font-size: 12px;
     color: #616161;
-    line-height: 1.6;
     background-color: #fff;
 }
 
@@ -356,4 +355,40 @@ h1, h2, h3, h4, h5, h6, p {
 .member_description::before {
   z-index: 1; /* Накладываем поверх, чтобы скрыть следы тени */
   box-shadow: none; /* Прячем тень */
+}
+.member_description__wrapper {
+  padding: 74px;
+}
+.title__wrapper {
+  text-align: left;
+  color: #000;
+}
+.description__text_wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 32px;
+}
+.description_text {
+  width: 640px;
+  text-align: left;
+  font-weight: 100;
+  font-size: 15px;
+}
+.social_links {
+  border-left: 2px #efefef solid;
+  text-align: left;
+  padding: 10px 25px;
+}
+.social_link {
+  a {
+    text-decoration: none;
+    color: #000;
+  }
+  img {
+    margin-right: 10px;
+    vertical-align: middle;
+    height: 18px;
+  }
+  margin: 10px;
 }
