--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -417,10 +417,74 @@ h1, h2, h3, h4, h5, h6, p {
 .caption {
   margin-bottom: 30px;
 }
-
-
-
-
+/* Work steps block */
+.worksteps__wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 150px 0;
+}
+.worksteps__title {
+  text-align: center;
+}
+.steps {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+.steps_wrapper {
+  background-color: #fff;
+  box-shadow: 0 0 5px rgba(0,0,0,0.2);
+}
+.steps_item {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  width: 360px;
+  padding: 40px;
+}
+.item_number {
+  font-family: 'Libre Baskerville', sans-serif;
+  font-weight: 700;
+  font-size: 45px;
+  color: #e0e0e0;
+  margin-top: -180px;
+}
+.item_text {
+  padding: 20px;
+}
+.item_title {
+  h3 {
+    font-weight: 300;
+  }
+  font-size: 20px;
+  color: #000;
+}
+.item_caption {
+  p {
+    font-size: 15px;
+    font-weight: 200;
+  }
+  padding-top: 20px;
+}
+.steps_images {
+  img {
+    width: 550px;
+  }
+  width: 550px;
+  font-size: 0px;
+  margin-top: 100px;
+  margin-right: -50%;
+}
+.leftstep {
+  margin:0 75% 0 -75%;
+}
+.rightstep {
+  margin:0 -75% 0 75%;
+}
 
 
 
