Block 'Blog' done

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -716,5 +716,80 @@ h1, h2, h3, h4, h5, h6, p {
   font-weight: 200;
 }
 
-
-/* */
+/* Block Blog */
+.blog  {
+  background-color: #f7f7f7;
+  padding: 140px 0 100px 0;
+}
+.blog__wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.post_wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
+  margin-top: 40px;
+}
+.active_post {
+  width: 555px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+}
+.img_text {
+  span {
+    margin-right: 10px;
+    text-transform: uppercase;
+  }
+  margin-left: 50px;
+  margin-top: -50px;
+}
+.post_content {
+  background-color: #fff;
+  margin-top: 15px;
+}
+.content_wrapper {
+  padding: 30px 50px 40px 50px;
+}
+.post_title {
+  font-size: 16px;
+  font-weight: 400;
+  color: #000;
+  margin-bottom: 10px;
+}
+.post_text {
+  font-size: 14px;
+  font-weight: 200;
+  color: #000;
+}
+.readfull {
+  text-decoration: none;
+  font-weight: 400;
+  color: #000;
+}
+.short_posts {
+  width: 555px;
+  display: flex;
+  flex-direction: column;
+  margin-left: 30px;
+}
+.short_posts__wrapper {
+  padding: 25px;
+  background-color: #fff;
+}
+.post_info {
+  span {
+    text-transform: uppercase;
+    margin-right: 20px;
+  }
+  font-size: 14px;
+  margin-bottom: 15px;
+}
+.post {
+  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+}
+.center_post {
+  margin: 31px 0;
+}
