--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -159,7 +159,6 @@ h1, h2, h3, h4, h5, h6, p {
 /* Home block */
 .home {
   width: 100%;
-  height: 650px;
   background: url('../img/first_bg.jpg') no-repeat center;
 }
 .home__transparent {
@@ -167,10 +166,10 @@ h1, h2, h3, h4, h5, h6, p {
   background: rgba(38,39,50,.85);
 }
 .home__inner {
-  height: 650px;
   @include flex-center;
 }
 .home__text {
+  margin-top: 80px;
   font-family: 'Libre Baskerville', sans-serif;
   font-weight: 400;
   font-size: 55px;
@@ -205,11 +204,10 @@ h1, h2, h3, h4, h5, h6, p {
 /* About block */
 .about {
   width: 100%;
-  height: 1000px;
 }
 .about__inner {
-  @include flex-sb;
-  height: 1000px;
+  @include flex-center;
+  margin: 100px 0;
 }
 .about__img {
   border: 4px #ddd solid;
@@ -234,23 +232,23 @@ h1, h2, h3, h4, h5, h6, p {
 
 /* Focus block*/
 .focus {
+  padding: 100px 0;
   width: 100%;
-  height: 825px;
   background-color: #f7f7f7;
 }
 .focus__inner {
-  height: 825px;
   @include flex-center;
 }
 .focus__wrapper {
-  width: 100%;
   text-align: center;
 }
 .focus__blocks {
   @include flex-sb;
   margin-top: 80px;
+
 }
 .focus__block {
+  margin: 0 20px;
   background-color: $white;
   box-shadow: 0 0 5px rgba(0,0,0,0.2);
 }
@@ -269,11 +267,10 @@ h1, h2, h3, h4, h5, h6, p {
 /* Video block */
 .video__inner {
   @include flex-center;
-  width: 100%;
-  height: 500px;
   background-color: #3f4049;
 }
 .video__wrapper {
+  margin: 100px 0;
   text-align: center;
 }
 .video__title {
@@ -288,8 +285,7 @@ h1, h2, h3, h4, h5, h6, p {
 /* Portfolio block */
 .portfolio__inner {
   @include flex-center;
-  width: 100%;
-  height: 1300px;
+  margin: 100px 0;
   background-color: $white;
 }
 .portfolio__wrapper {
@@ -320,11 +316,10 @@ h1, h2, h3, h4, h5, h6, p {
 /* Team block */
 .team__inner {
   @include flex-center;
-  width: 100%;
-  height: 1000px;
   background-color: #e5e5e5;
 }
 .team__wrapper {
+  margin: 100px 0;
   text-align: center;
 }
 .team__blocks {
@@ -350,8 +345,6 @@ h1, h2, h3, h4, h5, h6, p {
   font-weight: 500;
 }
 .member_description {
-  width: 1112px;
-  height: 352px;
   background: $white;
   margin: 50px auto;
   position: relative;
@@ -420,6 +413,8 @@ h1, h2, h3, h4, h5, h6, p {
 }
 .stat_img {
   margin-bottom: 30px;
+  width: 50px;
+  height: 50px;
 }
 .numeric {
   color: $white;
@@ -499,7 +494,7 @@ h1, h2, h3, h4, h5, h6, p {
 .price_wrapper {
   @include flex-sb;
   flex-direction: column;
-  padding: 145px 0;
+  padding: 100px 0;
 }
 .price_blocks {
   @include flex-sb;
@@ -569,7 +564,7 @@ h1, h2, h3, h4, h5, h6, p {
 /* Testimonials block */
 .testimonials {
   background-color: #3f4049;
-  padding: 140px 0;
+  padding: 100px 0;
 }
 .testimonials_wrapper {
   @include flex-center;
@@ -635,7 +630,7 @@ h1, h2, h3, h4, h5, h6, p {
 
 /* Why Select Us Block */
 .selectus {
-  padding: 145px 0 100px 0;
+  padding: 100px 0;
 }
 .selectus__wrapper {
   @include flex-center;
@@ -864,4 +859,187 @@ h1, h2, h3, h4, h5, h6, p {
   }
   @include flex-center;
   flex-direction: row;
+}
+
+
+/* Adaptive */
+
+
+@media (max-width:1169px) {
+  /* Base elements */
+  .container {
+    width: 90%;
+    padding: 0 10px;
+  }
+  /* Header */
+  .header{
+    width: 100%;
+    font-weight: 400;
+    font-size: 14px;
+  }
+  .nav__item {
+    padding-right: 16px;
+  }
+  /* Home block */
+  .home__text {
+    margin-top: 40px;
+    font-size: 42px;
+  }
+  .home__features {
+    margin: 40px 0;
+  }
+  /* About block */
+  .about__inner {
+    margin: 50px 0;
+  }
+  .about__img {
+    width: 400px;
+    height: 505px;
+  }
+  .text_wrapper {
+    width: 455px;
+  }
+  .about__text {
+    padding: 40px 30px;
+  }
+  /* Focus block*/
+  .focus {
+    padding: 50px 0;
+  }
+  .focus__blocks {
+    margin-top: 40px;
+  }
+  .focus__block {
+    margin: 0 10px;
+  }
+  .block__wrapper {
+    display: inline-block;
+    height: 230px;
+    width: 185px;
+    padding: 30px 15px;
+  }
+  .focus__title {
+    font-weight: 500;
+    font-size: 16px;
+    margin: 30px 0;
+  }
+  /* Video block */
+  .video__wrapper {
+    margin: 50px 0;
+  }
+  .video__btn {
+    margin: 20px 0;
+  }
+  /* Portfolio block */
+  .portfolio__inner {
+    margin: 50px 0;
+  }
+  .portfolio__blocks {
+    @include flex-center;
+    flex-wrap: wrap;
+    margin-top: 40px;
+  }
+  .portfolio__block {
+    img {
+      width: 100%;
+      height: 100%;
+    }
+    width: 252px;
+    height: 202px;
+    margin: 10px;
+    background-color: $white;
+  }
+  .portfolio__block:hover {
+    width: 242px;
+    height: 192px;
+    padding: 5px;
+    box-shadow: 0 0 5px rgba(0,0,0,0.1);
+  }
+  /* Team block */
+  .team__wrapper {
+    margin: 50px 0;
+  }
+  .team__blocks {
+    margin: 0 auto;
+  }
+  .team__block {
+    width: 185px;
+    height: 300px;
+    margin: 0 5px;
+  }
+  .block__inner {
+    img {
+      width: 175px;
+      height: 210px;
+    }
+    padding: 5px;
+  }
+  .member_description__wrapper {
+    padding: 54px;
+  }
+  .description__text_wrapper {
+    margin-top: 12px;
+  }
+  /* Stats block */
+  .stats_wrapper {
+    padding: 50px 75px;
+  }
+  /* Work steps block */
+  .worksteps__wrapper {
+    padding: 50px 0;
+  }
+  .steps_item {
+    width: 250px;
+    padding: 10px;
+  }
+  .item_text {
+    padding: 10px;
+  }
+  .item_title {
+    font-size: 16px;
+  }
+  .item_caption {
+    p {
+      font-size: 14px;
+    }
+  }
+  .steps_images {
+    img {
+      width: 400px;
+    }
+    width: 400px;
+    margin-top: 0px;
+  }
+  /* Price block */
+  .price_wrapper {
+    padding: 50px 0;
+  }
+  .price_blocks {
+    margin-top: 30px;
+  }
+  .price_block {
+    margin: 10px;
+  }
+  .price_content {
+    padding: 30px 40px;
+    text-align: center;
+  }
+  /* Testimonials block */
+  .testimonials {
+    padding: 50px 0;
+  }
+  .testimonials__block {
+    margin-top: 40px;
+  }
+  .testimonials__text_wrapper {
+    padding: 20px;
+  }
+  /* Why Select Us Block */
+  .selectus {
+    padding: 50px 0;
+  }
+  .selectus_action {
+    margin-top: 30px;
+  }
+  
 }
