--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -156,6 +156,130 @@ h1, h2, h3, h4, h5, h6, p {
    color: $red;
 }
 
+.mobile-menu {
+  position: fixed;
+  display: none;
+  align-items: center;
+  justify-content: center;
+  padding: 0 16px;
+  top: 0;
+  right: 0;
+  height: 75px;
+  width: 75px;
+  z-index: 9999999;
+  &__btn {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 35px;
+    height: 30px;
+    cursor: pointer;
+    transition: .4s;
+  }
+  &__icon {
+    display: block;
+    position: relative;
+    background: #999;
+    width: 90%;
+    height: 4px;
+    transition: .4s;
+    &::after,
+    &::before {
+        content: "";
+        display: block;
+        position: absolute;
+        background: #999;
+        width: 100%;
+        height: 4px;
+        transition: .4s;
+    }
+    &::after {
+      top: 8px;
+    }
+    &::before {
+      top: -8px;
+    }
+  }
+
+  &__container {
+    position: fixed;
+    text-align: center;
+    display: flex;
+    //align-items: center;
+    justify-content: center;
+    top: 75px;
+    //left: 0;
+    right: 0;
+    z-index: 999;
+    height: 0;
+    width: 50%;
+    opacity: 1;
+    transition: .5s;
+    transition-delay: .2s;
+    overflow: hidden;
+    background: #fff;
+  }
+
+  &__list {
+    transition: .5s;
+    transition-delay: .5s;
+    list-style: none;
+    padding-left: 0;
+    margin-top: -50px;
+  }
+
+  &__item {
+    font-size: 26px;
+    padding-bottom: 15px;
+  }
+
+  &__link {
+    text-decoration: none;
+    color: #272727;
+  }
+
+  &__checkbox {
+      display: none;
+
+      &:checked ~ {
+          .mobile-menu {
+
+              &__nav {
+                opacity: 1;
+                transition-delay: 0s;
+              }
+
+              &__container {
+                height: 100%;
+                transition-delay: 0s;
+              }
+
+              &__btn {
+                .mobile-menu__icon {
+                    background: transparent;
+
+                    &::before,
+                    &::after {
+                        top: 0;
+                    }
+
+                    &::after {
+                      transform: rotate(-45deg);
+                      -webkit-transform: rotate(-45deg);
+                    }
+
+                    &::before {
+                      transform: rotate(45deg);
+                      -webkit-transform: rotate(45deg);
+                    }
+                }
+              }
+          }
+      }
+    }
+}
+
 /* Home block */
 .home {
   width: 100%;
@@ -864,7 +988,6 @@ h1, h2, h3, h4, h5, h6, p {
 
 /* Adaptive */
 
-
 @media (max-width:1169px) {
   /* Base elements */
   .container {
@@ -878,7 +1001,7 @@ h1, h2, h3, h4, h5, h6, p {
     font-size: 14px;
   }
   .nav__item {
-    padding-right: 16px;
+    padding-right: 10px;
   }
   /* Home block */
   .home__text {
@@ -1078,5 +1201,148 @@ h1, h2, h3, h4, h5, h6, p {
   }
   .footer {
     margin: 50px 0 0 0;
+  }
+}
+@media (max-width: 889px) {
+  /* Header */
+  .nav {
+    display: none;
+  }
+  .mobile-menu {
+    display: flex;
+  }
+  /* Home block */
+  .home__wrapper {
+    @include flex-center;
+    flex-direction: column;
+  }
+  .home__text {
+    font-size: 30px;
+    width: 90%;
+  }
+  /* Focus block*/
+  .focus__blocks {
+    @include flex-center;
+    flex-wrap: wrap;
+  }
+  .focus__block {
+    margin: 30px;
+  }
+  /* Team block */
+  .team__block {
+    margin: 10px;
+  }
+  .member_description {
+    display: none;
+  }
+  /* Work steps block */
+  .steps_images {
+    display: none;
+  }
+  .steps_item {
+    width: 360px;
+  }
+  .item_number {
+    margin-top: -100px;
+  }
+  .leftstep {
+    margin: 20px;
+  }
+  .rightstep {
+    margin: 20px;
+  }
+  /* Price block */
+  .price_blocks {
+    @include flex-center;
+    flex-wrap: wrap;
+  }
+  .price_block {
+    margin: 20px;
+  }
+  .price_content {
+    padding: 30px 70px;
+  }
+  /* Testimonials block */
+  .testimonials__img {
+    display: none;
+  }
+  .testimonials__switcher {
+    margin-top: 20px;
+  }
+  .switcher__item {
+    margin-left: 10px;
+    width: 30px;
+    height: 30px;
+    border: 2px solid $white;
+    border-radius: 30px;
+  }
+  .active_switcher {
+    width: 28px;
+    height: 28px;
+    padding: 2px;
+    border: 2px solid $red;
+    @include flex-center;
+  }
+  .active_button {
+    width: 16px;
+    height: 16px;
+    background-color: $red;
+    border-radius: 16px;
+  }
+  .testimonials__text_wrapper {
+    font-size: 16px;
+  }
+  .client_caption {
+    margin-top: 10px;
+  }
+  /* Why Select Us Block */
+  .table__item {
+    width: 80%;
+  }
+  .item__header {
+    width: 100%;
+  }
+  .content__text {
+    font-size: 16px;
+    font-weight: 200;
+  }
+  /* Block Blog */
+  .post_wrapper {
+    flex-direction: column;
+    margin-top: 40px;
+  }
+  .post_img {
+    img {
+      width: 400px;
+    }
+  }
+  .short_posts {
+    margin-left: 0px;
+  }
+  .active_post {
+    margin-bottom: 30px;
+  }
+  /* Block Get in touch */
+  .touch__form {
+    width: 90px;
+  }
+  .touch__form_textarea {
+    width: 100%;
+    height: 160px;
+  }
+  .footer {
+    width: 100%;
+  }
+  .logo_block__wrapper {
+    @include flex-center;
+    align-items: flex-start;
+    padding: 20px;
+    height: 125px;
+  }
+  .social_footer {
+    img {
+      width: 20px;
+      margin: 5px;
+    }
   }
 }
